se mejoro la HU4